--- a/gymwebpagehtml/index.html
+++ b/gymwebpagehtml/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Web Design Mastery | Fitclub</title>
+    <title>Gm Webpage</title>
   </head>
   <body>
     <nav>
